# achers_myspace

./: .gitignore  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: ci-cd.yml
achers_myspace/: Dockerfile  manage.py
achers_myspace/achers_myspace/: urls.py  wsgi.py
achers_myspace/achers_myspace/settings/: base.py  dev.py  production.py
achers_myspace/achers_myspace/static/css/: achers_myspace.css
achers_myspace/achers_myspace/templates/: 404.html  500.html  base.html
achers_myspace/blog/: email.py  models.py  tests.py  wagtail_hooks.py
achers_myspace/blog/migrations/: 0001_initial.py  0002_blogpage_top.py  0003_blogpage_newsletter_campaign_and_more.py
achers_myspace/blog/templates/blog/: _newsletter.html  blog_page.html  newsletter.html
achers_myspace/home/: models.py  tests.py
achers_myspace/home/migrations/: 0003_homepage_body.py
achers_myspace/home/templates/home/: home_page.html
