[project]
name = "achers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "wagtail>=7.2.1",
    "gunicorn>=20.0.4",
    "django-environ>=0.12.0",
    # REMOVED: mailerlite (replaced with wagtail-newsletter)
    # REMOVED: beautifulsoup4 (only used by mailerlite integration)
    "psycopg>=3.3.2",
    "wagtail-newsletter>=0.2.0",
    "mailchimp-marketing>=3.0.80",
]
